--- a/pom.xml
+++ b/pom.xml
@@ -10,15 +10,23 @@
 	</parent>
 	<groupId>artie.sensor</groupId>
 	<artifactId>keyboardmouse</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1-snapshot</version>
 	<name>keyboardmouse</name>
 	<description>Keyboard And Mouse sensor for artie client</description>
 
 	<properties>
 		<java.version>1.8</java.version>
-		<artie.common.version>0.3.0-SNAPSHOT</artie.common.version>
+		<artie.sensor.common.version>0.0.1-SNAPSHOT</artie.sensor.common.version>
 		<jnativehook.version>2.0.3</jnativehook.version>
 	</properties>
+
+	<repositories>
+    	<repository>
+      		<id>github</id>
+      		<name>ARTIEROCKS Github repository</name>
+      		<url>https://maven.pkg.github.com/ARTIEROCKS</url>
+    	</repository>
+  	</repositories>
 
 	<dependencies>
 		<dependency>
@@ -38,9 +46,9 @@
 			</exclusions>
 		</dependency>
 		<dependency>
-			<groupId>artie</groupId>
-			<artifactId>common</artifactId>
-			<version>${artie.common.version}</version>
+		  <groupId>artie.sensor</groupId>
+		  <artifactId>common</artifactId>
+		  <version>${artie.sensor.common.version}</version>
 		</dependency>
 		<dependency>
         	<groupId>com.1stleg</groupId>
