--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,14 @@
         	<version>${jnativehook.version}</version>
     	</dependency>
 	</dependencies>
+	
+	<distributionManagement>
+   		<repository>
+     		<id>github</id>
+     		<name>GitHub ARTIEROCKS Apache Maven Packages</name>
+     		<url>https://maven.pkg.github.com/ARTIEROCKS/ARTIESensor_KeyboardMouse</url>
+   		</repository>
+	</distributionManagement>
 
 	<build>
 		<plugins>
