--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
 	</properties>
 
 	<repositories>
+		<repository>
+          <id>central</id>
+          <url>https://repo1.maven.org/maven2</url>
+          <releases><enabled>true</enabled></releases>
+          <snapshots><enabled>true</enabled></snapshots>
+        </repository>
     	<repository>
       		<id>github</id>
       		<name>ARTIEROCKS Github repository</name>
