Adapted to the client specifications.

--- a/src/main/resources/keyboardmouse.properties
+++ b/src/main/resources/keyboardmouse.properties
@@ -1,3 +1,6 @@
+#Sensor general configuration
+artie.sensor.class=artie.sensor.keyboardmouse.KeyboardMouseSensor
+
 #Sensor getData rate
 artie.sensor.keyboardmouse.rate=10000
 
