--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+#Server management
+server.port: 8080
+management.server.port: 8081
+management.server.address: 127.0.0.1
+
 #Sensor general configuration
 artie.sensor.class=artie.sensor.keyboardmouse.KeyboardMouseSensor
 
