--- a/pom.xml
+++ b/pom.xml
@@ -10,13 +10,13 @@
 	</parent>
 	<groupId>artie.sensor</groupId>
 	<artifactId>keyboardmouse</artifactId>
-	<version>0.1.0-snapshot</version>
+	<version>1.0-RELEASE</version>
 	<name>keyboardmouse</name>
 	<description>Keyboard And Mouse sensor for artie client</description>
 
 	<properties>
 		<java.version>1.8</java.version>
-		<artie.sensor.common.version>0.0.3-SNAPSHOT</artie.sensor.common.version>
+		<artie.sensor.common.version>1.0-RELEASE</artie.sensor.common.version>
 		<jnativehook.version>2.0.3</jnativehook.version>
 		<start-class>artie.sensor.keyboardmouse.KeyboardmouseApplication</start-class>
 	</properties>
