Some issues fixed in the configuration endpoint and added the sensor name to the sensor object.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,10 +9,9 @@ management.server.port: 8081
 management.server.address: 127.0.0.1
 
 #Sensor general configuration
-artie.sensor.class=artie.sensor.keyboardmouse.KeyboardMouseSensor
-
-#Sensor getData rate
-artie.sensor.keyboardmouse.rate=10000
+artie.sensor.keyboardmouse.name=Keyboard and Mouse Sensor
+artie.sensor.keyboardmouse.version=1.0
+artie.sensor.keyboardmouse.author=Luis-Eduardo Imbernón
 
 #Sensor file
 artie.sensor.keyboardmouse.file.name=KeyboardMouseSensor.log
