--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,11 @@
+#Database server parameters
+spring.datasource.url=jdbc:h2:tcp://localhost:9090/mem:artieclientdb
+#spring.datasource.url=jdbc:h2:file:~/database/artieclientdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=artie
+spring.datasource.password=ArtiE123
+spring.jpa.hibernate.ddl-auto=create
+
 #Actuator properties
 management.endpoints.web.exposure.include=*
 management.endpoint.shutdown.enabled=true
