Fized the problem with the arraylist when the list is shared and added the component scan.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,5 @@
-#Database server parameters
-spring.datasource.url=jdbc:h2:tcp://localhost:9090/mem:artieclientdb
-#spring.datasource.url=jdbc:h2:file:~/database/artieclientdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=artie
-spring.datasource.password=ArtiE123
-spring.jpa.hibernate.ddl-auto=create
+#Main spring configuration
+spring.main.lazy-initialization=true
 
 #Actuator properties
 management.endpoints.web.exposure.include=*
