Somme little corrections.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ artie.sensor.keyboardmouse.author=Luis-Eduardo Imbernón
 
 #Sensor file
 artie.sensor.keyboardmouse.file.name=KeyboardMouseSensor.log
-artie.sensor.keyboardmouse.file.registration=true
+artie.sensor.keyboardmouse.file.registration=false
 
 #Sensor configuration
 artie.sensor.keyboardmouse.listener.keyboard.active=true
