Added the data sensor limit.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,7 @@ artie.sensor.keyboardmouse.file.name=KeyboardMouseSensor.log
 artie.sensor.keyboardmouse.file.registration=false
 
 #Sensor configuration
+artie.sensor.datalimit=500
 artie.sensor.keyboardmouse.listener.keyboard.active=true
 artie.sensor.keyboardmouse.listener.mouse.active=true
 artie.sensor.keyboardmouse.listener.mouse-motion.active=true
