Added the limit of the events.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,8 @@ artie.sensor.keyboardmouse.file.name=KeyboardMouseSensor.log
 artie.sensor.keyboardmouse.file.registration=false
 
 #Sensor configuration
-artie.sensor.datalimit=500
+artie.sensor.datalimit=2000
+artie.sensor.keyboardmouse.listener.datalimit=500
 artie.sensor.keyboardmouse.listener.keyboard.active=true
 artie.sensor.keyboardmouse.listener.mouse.active=true
 artie.sensor.keyboardmouse.listener.mouse-motion.active=true
